# jugemu

./: .gitignore  Justfile  Makefile  README.md  config.toml  pyproject.toml  requirements.txt  tasks.txt
src/: browse_stats.py  chat.py  chroma_store.py  cli.py  config.py  embeddings.py  entrypoints.py  eval_char_model.py  export_retrieval.py  ingest_chroma.py  load_checkpoint.py  normalize.py  parse_exports.py  pipeline.py  redact.py  rerank.py  retrieve.py  sample.py  store_factory.py  text_dataset.py  tiny_char_transformer.py  train_char_model.py  vector_backend.py  vector_store.py  vector_store_schema.py
tests/: test_browse_stats.py  test_cassandra_vector_store.py  test_chat_prompt_templates.py  test_chunking.py  test_cli_browse.py  test_cli_browse_config_defaults.py  test_cli_browse_out.py  test_cli_chat_json.py  test_cli_chat_prompt_template_validation.py  test_cli_chat_reply_strategy_validation.py  test_cli_chat_vector_backend_validation.py  test_cli_export_retrieval.py  test_cli_export_retrieval_config_out_format.py  test_cli_export_retrieval_no_print.py  test_cli_export_retrieval_out.py  test_cli_export_retrieval_query_option.py  test_cli_ingest_dry_run_option.py  test_cli_ingest_fast_embedding_model_option.py  test_cli_ingest_max_messages_option.py  test_cli_pipeline_config_defaults.py  test_cli_pipeline_smoke_flags.py  test_cli_pipeline_vector_backend.py  test_cli_rebuild_store.py  test_cli_schema.py  test_cli_version.py  test_config_optional_load.py  test_dedupe.py  test_embeddings_batch_size.py  test_embeddings_none_batch_size.py  test_export_retrieval.py  (+15 more)
(+4 files in other folders)
