[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jugemu"
version = "0.0.1"
description = "Tiny char-level LLM trained on messages + ChromaDB retrieval"
requires-python = ">=3.10,<3.14"

dependencies = [
	"torch>=2.2.0",
	"numpy>=1.26.0",
	"tqdm>=4.66.0",
	"chromadb==0.5.23",
	"posthog>=2.4.0,<4.0.0",
	"sentence-transformers>=3.0.0",
	"pydantic>=2.6.0",
	"rich>=13.7.0",
	"typer>=0.12.0",
	"cassandra-driver>=3.29.0",
]

[project.scripts]
jugemu-ingest = "src.entrypoints:ingest_main"
jugemu-train = "src.entrypoints:train_main"
jugemu-chat = "src.entrypoints:chat_main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.ruff]
line-length = 100
